--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
   <meta charset="utf-8">
   <title>Ladi</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/material.scss">
+
+  <script src="assets/js/jquery-2.2.4.min.js" type="text/javascript"></script>
+  <script src="assets/js/jquery-ui.min.js" type="text/javascript"></script>
+  <script src="assets/js/jquery.ui.resizable.snap.ext.js" type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
